# demo/openapi.yaml
@@ -116,6 +116,9 @@ paths:
       summary: Add a new pet to the store
       description: Add new pet to the store inventory.
       operationId: addPet
+      x-badges:
+        - name: Global
+          type: global
       responses:
         '405':
           description: Invalid input
@@ -163,6 +166,9 @@ paths:
       summary: Update an existing pet
       description: ''
       operationId: updatePet
+      x-badges:
+        - name: US Only
+          type: usonly
       responses:
         '400':
           description: Invalid ID supplied
@@ -193,6 +199,9 @@ paths:
     get:
       description: Retrieve the history information associated with an order.
       operationId: GetOrderHistory
+      x-badges:
+        - name: Success
+          type: success
       parameters:
         - description: ''
           in: path
