# src/utils/openapi.ts
@@ -663,6 +663,7 @@ export function isRedocExtension(key: string): boolean {
     'x-badges': true,
     'x-additionalPropertiesName': true,
     'x-explicitMappingOnly': true,
+    'x-badges': true,
   };
 
   return key in redocExtensions;
